done bert pipeline

--- a/nlp_pratical_session.ipynb
+++ b/nlp_pratical_session.ipynb
@@ -179,7 +179,7 @@
     "from transformers import pipeline\n",
     "\n",
     "unmasker = pipeline('fill-mask', model='bert-base-uncased')\n",
-    "unmasker(\"The concept of One Health recognizes the interconnectedness of human, [MASK], and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.\")"
+    "unmasker(\"One Health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, [MASK] and our environment.\")"
    ]
   },
   {
