done bert pipeline

--- a/nlp_pratical_session.ipynb
+++ b/nlp_pratical_session.ipynb
@@ -128,19 +128,23 @@
    "metadata": {},
    "source": [
     "## 1.2 NLP tasks with BERT\n",
-    "Let's use transformers' pipeline on common NLP tasks"
+    "Let's use transformers' pipeline on common NLP tasks\n",
+    "### 1.2.1 Self-masking\n",
+    "Predict a token masked inside a sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "/home/rdecoupe/Documents/TETIS/documentation/missions/2023-04_Perth_Murdoch/workshop_MOOD_Murdoch_NLP_for_one_health/.conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -148,29 +152,29 @@
     {
      "data": {
       "text/plain": [
-       "[{'score': 0.41287505626678467,\n",
-       "  'token': 4111,\n",
-       "  'token_str': 'animal',\n",
-       "  'sequence': 'the concept of one health recognizes the interconnectedness of human, animal, and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.'},\n",
-       " {'score': 0.08554541319608688,\n",
-       "  'token': 2591,\n",
-       "  'token_str': 'social',\n",
-       "  'sequence': 'the concept of one health recognizes the interconnectedness of human, social, and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.'},\n",
-       " {'score': 0.052403345704078674,\n",
-       "  'token': 16928,\n",
-       "  'token_str': 'occupational',\n",
-       "  'sequence': 'the concept of one health recognizes the interconnectedness of human, occupational, and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.'},\n",
-       " {'score': 0.03880768641829491,\n",
-       "  'token': 5177,\n",
-       "  'token_str': 'mental',\n",
-       "  'sequence': 'the concept of one health recognizes the interconnectedness of human, mental, and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.'},\n",
-       " {'score': 0.025313813239336014,\n",
+       "[{'score': 0.4010227620601654,\n",
+       "  'token': 4279,\n",
+       "  'token_str': 'communities',\n",
+       "  'sequence': 'one health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, communities and our environment.'},\n",
+       " {'score': 0.09270986169576645,\n",
+       "  'token': 4176,\n",
+       "  'token_str': 'animals',\n",
+       "  'sequence': 'one health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, animals and our environment.'},\n",
+       " {'score': 0.06399711221456528,\n",
+       "  'token': 2945,\n",
+       "  'token_str': 'families',\n",
+       "  'sequence': 'one health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, families and our environment.'},\n",
+       " {'score': 0.06004488468170166,\n",
        "  'token': 2740,\n",
        "  'token_str': 'health',\n",
-       "  'sequence': 'the concept of one health recognizes the interconnectedness of human, health, and environmental health, and emphasizes the need for collaboration across sectors to address complex health challenges.'}]"
+       "  'sequence': 'one health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, health and our environment.'},\n",
+       " {'score': 0.05965539067983627,\n",
+       "  'token': 4044,\n",
+       "  'token_str': 'environment',\n",
+       "  'sequence': 'one health is an approach calling for the collaborative efforts of multiple disciplines working locally, nationally, and globally, to attain optimal health for people, environment and our environment.'}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,8 +187,144 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2.2 Next sentence prediction\n",
+    "The aim of this NLP task is to tell if the 2nd sentence could be after the first one"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.bias']\n",
+      "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertTokenizer, BertForNextSentencePrediction\n",
+    "from torch.nn.functional import softmax\n",
+    "\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "nsp_model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "def next_sentence_prediction(sentence_1, sentence_2):\n",
+    "  encoding = tokenizer.encode_plus(sentence_1, sentence_2, return_tensors='pt')\n",
+    "  logits = nsp_model(**encoding)[0] \n",
+    "  probs = softmax(logits, dim=1)\n",
+    "  return probs[0][0].item()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999943971633911\n",
+      "7.740520959487185e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_1 = \"The One Health Initiative is an interdisciplinary movement to create collaborations between animal, human, and environmental health\"\n",
+    "sentence_2 = \"The aim is  to better and more rapidly respond to outbreaks and newly emerging zoonoses and diseases.\"\n",
+    "\n",
+    "score = next_sentence_prediction(sentence_1, sentence_2)\n",
+    "print(score)\n",
+    "\n",
+    "sentence_3 = \"Murdoch University is located in Perth, Western Australia\"\n",
+    "\n",
+    "score = next_sentence_prediction(sentence_1, sentence_3)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2.3 Name Entities Recognition\n",
+    "NER is very usefull to extract specific information. In epidemiology surveillance, we want to extract from new articles the pathogen, the host and the location of an outbreak."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading (…)lve/main/config.json: 100%|██████████| 829/829 [00:00<00:00, 334kB/s]\n",
+      "Downloading pytorch_model.bin: 100%|██████████| 433M/433M [00:09<00:00, 45.9MB/s] \n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 59.0/59.0 [00:00<00:00, 19.8kB/s]\n",
+      "Downloading (…)solve/main/vocab.txt: 100%|██████████| 213k/213k [00:00<00:00, 708kB/s]\n",
+      "Downloading (…)in/added_tokens.json: 100%|██████████| 2.00/2.00 [00:00<00:00, 499B/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 112/112 [00:00<00:00, 35.0kB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'entity': 'B-LOC',\n",
+       "  'score': 0.9993818,\n",
+       "  'index': 8,\n",
+       "  'word': 'Do',\n",
+       "  'start': 22,\n",
+       "  'end': 24},\n",
+       " {'entity': 'I-LOC',\n",
+       "  'score': 0.8579382,\n",
+       "  'index': 9,\n",
+       "  'word': '##rdo',\n",
+       "  'start': 24,\n",
+       "  'end': 27},\n",
+       " {'entity': 'B-LOC',\n",
+       "  'score': 0.69484633,\n",
+       "  'index': 10,\n",
+       "  'word': '##gne',\n",
+       "  'start': 27,\n",
+       "  'end': 30}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "ner = pipeline('ner', model='dslim/bert-base-NER')\n",
+    "ner(\"2 swans found dead in Dordogne\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 Diving into the model representation\n",
+    "### 1.3.1 Inputs: Natural text to vecteurs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +332,7 @@
      "output_type": "stream",
      "text": [
       "If you want to use `BertLMHeadModel` as a standalone, add `is_decoder=True.`\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertLMHeadModel: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertLMHeadModel: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertLMHeadModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertLMHeadModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -200,17 +340,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'The concept of One Health recognizes the interconnectedness of  of and and and and and and and and'}]"
+       "[{'generated_text': 'One Health is an approach calling for the collaborative efforts of multiple a a a a a a a a'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "next_sentence_preduction = pipeline('text-generation', model='bert-base-uncased')\n",
-    "next_sentence_preduction(\"The concept of One Health recognizes the interconnectedness of \")"
+    "text_generation = pipeline('text-generation', model='bert-base-uncased')\n",
+    "text_generation(\"One Health is an approach calling for the collaborative efforts of multiple\")"
    ]
   },
   {
