--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -12,13 +12,14 @@
     "|---|---|---|---|\n",
     "| <img src=\"https://mood-h2020.eu/wp-content/uploads/2020/10/logo_Mood_texte-dessous_CMJN_vecto-300x136.jpg\" alt=\"mood\"/> | <img src=\"https://www.murdoch.edu.au/ResourcePackages/Murdoch2021/assets/dist/images/logo.svg\" alt=\"murdoch\" /> | <img src=\"https://www.umr-tetis.fr/images/logo-header-tetis.png\" alt=\"tetis\"/> | <img src=\"https://www.inrae.fr/themes/custom/inrae_socle/logo.svg\" alt=\"INRAE\" /> |\n",
     "\n",
-    "Speaker:\n",
+    "Speakers:\n",
     "\n",
     "- **Rémy DECOUPES** - Research engineer UMR TETIS / INRAE\n",
     "- **Maguelonne TEISSEIRE** - Prof. UMR TETIS / INRAE\n",
     "\n",
     "------------------------\n",
-    "# Chapter 2: ChatGPT"
+    "# Chapter 2: ChatGPT\n",
+    "[ChatGPT](https://chat.openai.com) is an AI chatbot developed by OpenAI. ChatGPT uses a generative language model called GPT-3.5 without subscription and GPT-4 (for 20$/month)"
    ]
   },
   {
