add same text generation examples previously used with bert in ChatGPT

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -78,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"sk-\""
+    "openai.api_key = \"sk-...\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Text generation with ChatGPT"
+    "## 2.2 Text generation with ChatGPT\n",
+    "\n",
+    "Let's now try the same text generation that we tried with bert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "disciplines working locally, nationally, and globally to attain optimal health for people, animals, and the environment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_sentence = \"One Health is an approach calling for the collaborative efforts of multiple\"\n",
+    "\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo-0301\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": f\"Could you complete this following sentence ? {my_sentence}\"},\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")\n",
+    "\n",
+    "print(response['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The One Health concept is a collaborative approach that recognizes the interconnectedness of human, animal, and environmental health. It emphasizes the need for interdisciplinary cooperation and communication among professionals in various fields, including medicine, veterinary science, public health, environmental science, and others, to address complex health issues that affect multiple species and ecosystems. The goal of One Health is to promote the health and well-being of all living beings and the planet as a whole.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_question = \"question: What is the one health concept ?\"\n",
+    "\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo-0301\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": f\"Could you answer to this following question ? {my_question}\"},\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")\n",
+    "\n",
+    "print(response['choices'][0]['message']['content'])"
    ]
   },
   {
