introduction of paper-qa

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -601,11 +601,105 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 Paper-QA\n",
+    "To prevent hallucination, LLMs have to been grounded with real references.\n",
+    "\n",
+    "Paper-QA is a python library built uppon LangChain that allow to question and answer from our PDF papers. By grounding responses with in-text citations, it reduces hallucinations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting paper-qa\n",
+      "  Downloading paper_qa-0.1.0-py3-none-any.whl (12 kB)\n",
+      "Collecting pypdf\n",
+      "  Downloading pypdf-3.7.0-py3-none-any.whl (246 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m246.9/246.9 kB\u001b[0m \u001b[31m849.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting tiktoken\n",
+      "  Downloading tiktoken-0.3.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.7 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: openai>=0.27.0 in ./.conda/lib/python3.10/site-packages (from paper-qa) (0.27.4)\n",
+      "Requirement already satisfied: langchain>=0.0.98 in ./.conda/lib/python3.10/site-packages (from paper-qa) (0.0.135)\n",
+      "Collecting faiss-cpu\n",
+      "  Using cached faiss_cpu-1.7.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.0 MB)\n",
+      "Collecting PyCryptodome\n",
+      "  Using cached pycryptodome-3.17-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.1 MB)\n",
+      "Collecting html2text\n",
+      "  Using cached html2text-2020.1.16-py3-none-any.whl (32 kB)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (3.8.4)\n",
+      "Requirement already satisfied: openapi-schema-pydantic<2.0,>=1.2 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (1.2.4)\n",
+      "Requirement already satisfied: pydantic<2,>=1 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (1.10.7)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (4.0.2)\n",
+      "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (8.2.2)\n",
+      "Requirement already satisfied: dataclasses-json<0.6.0,>=0.5.7 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (0.5.7)\n",
+      "Requirement already satisfied: numpy<2,>=1 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (1.23.5)\n",
+      "Requirement already satisfied: requests<3,>=2 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (2.28.2)\n",
+      "Requirement already satisfied: SQLAlchemy<2,>=1 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (1.4.47)\n",
+      "Requirement already satisfied: PyYAML>=5.4.1 in ./.conda/lib/python3.10/site-packages (from langchain>=0.0.98->paper-qa) (6.0)\n",
+      "Requirement already satisfied: tqdm in ./.conda/lib/python3.10/site-packages (from openai>=0.27.0->paper-qa) (4.65.0)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in ./.conda/lib/python3.10/site-packages (from tiktoken->paper-qa) (2023.3.23)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (1.8.2)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (1.3.1)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (3.1.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (6.0.4)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (22.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in ./.conda/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.98->paper-qa) (1.3.3)\n",
+      "Requirement already satisfied: marshmallow-enum<2.0.0,>=1.5.1 in ./.conda/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain>=0.0.98->paper-qa) (1.5.1)\n",
+      "Requirement already satisfied: typing-inspect>=0.4.0 in ./.conda/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain>=0.0.98->paper-qa) (0.8.0)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.3.0 in ./.conda/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain>=0.0.98->paper-qa) (3.19.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in ./.conda/lib/python3.10/site-packages (from pydantic<2,>=1->langchain>=0.0.98->paper-qa) (4.5.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.conda/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.98->paper-qa) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in ./.conda/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.98->paper-qa) (1.26.15)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.conda/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.98->paper-qa) (2022.12.7)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in ./.conda/lib/python3.10/site-packages (from SQLAlchemy<2,>=1->langchain>=0.0.98->paper-qa) (2.0.2)\n",
+      "Requirement already satisfied: packaging>=17.0 in ./.conda/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.3.0->dataclasses-json<0.6.0,>=0.5.7->langchain>=0.0.98->paper-qa) (23.0)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in ./.conda/lib/python3.10/site-packages (from typing-inspect>=0.4.0->dataclasses-json<0.6.0,>=0.5.7->langchain>=0.0.98->paper-qa) (1.0.0)\n",
+      "Installing collected packages: faiss-cpu, pypdf, PyCryptodome, html2text, tiktoken, paper-qa\n",
+      "Successfully installed PyCryptodome-3.17 faiss-cpu-1.7.3 html2text-2020.1.16 paper-qa-0.1.0 pypdf-3.7.0 tiktoken-0.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install paper-qa"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    " \n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from paperqa import Docs\n",
+    "\n",
+    "my_docs = [\"...\",\n",
+    "           \"...\"\n",
+    "          ]\n",
+    "\n",
+    "docs = Docs()\n",
+    "for d in my_docs:\n",
+    "    docs.add(d)"
+   ]
   }
  ],
  "metadata": {
