add LLM chronology

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -182,9 +182,11 @@
     "## 2.3 Langchain\n",
     "GPT-3.5 is not the only LLM ! Langchain is a python library that makes easy to use different API (like OpenAI, HuggingFace, Cohere, ...)\n",
     "\n",
-    "<img align=\"right\" src=\"https://huggingface.co/front/assets/huggingface_logo-noborder.svg\">\n",
+    "From \"[A Survey of Large Language Models](http://arxiv.org/abs/2302.07842)\" - Zhao et al. - 2023:\n",
     "\n",
-    "From \"A Survey of Large Language Models\" - Zhao et al. - 2023 - META\n"
+    "<img align=\"left\" src=https://gitlab.irstea.fr/umr-tetis/mood/pratical-session-nlp-for-one-health-murdoch-mood/-/raw/master/ressources/LLM_chronology>\n",
+    "\n",
+    "<img align=\"right\" src=\"https://huggingface.co/front/assets/huggingface_logo-noborder.svg\">"
    ]
   },
   {
