add google collab import

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -363,6 +363,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import your article files (in PDF format)**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "uploaded = files.upload()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "see which files have been imported to your google session:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list(uploaded.keys()))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -381,9 +416,7 @@
    "source": [
     "from paperqa import Docs\n",
     "\n",
-    "my_docs = [\"...\",\n",
-    "           \"...\"\n",
-    "          ]\n",
+    "my_docs = list(uploaded.keys())\n",
     "\n",
     "docs = Docs()\n",
     "for d in my_docs:\n",
