change google collab links

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -432,6 +432,21 @@
     "answer = docs.query(\"Could you list all environnement data that could have an impact on avian influenza outbreak ?\")\n",
     "print(answer.formatted_answer)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How does paper-qa work ?**\n",
+    "\n",
+    "<img src=\"https://gitlab.irstea.fr/umr-tetis/mood/pratical-session-nlp-for-one-health-murdoch-mood/-/raw/master/ressources/paper-qa-explanations.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
